CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/sfrosit_t_indiv_cat_rq_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_indiv_cat_rq_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_indiv_cat_rq_hist</externalName>
    <label>Child Care Request History</label>
    <pluralLabel>Child Care Request History</pluralLabel>
</CustomObject>