CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/cde_cat_prog__c.field-meta.xml
<CustomField>
    <fullName>cde_cat_prog__c</fullName>
    <description>cde_cat_prog</description>
    <externalDeveloperName>cde_cat_prog</externalDeveloperName>
    <label>Program Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>