CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/cde_change_rq_cat__c.field-meta.xml
<CustomField>
    <fullName>cde_change_rq_cat__c</fullName>
    <description>cde_change_rq_cat</description>
    <externalDeveloperName>cde_change_rq_cat</externalDeveloperName>
    <label>Reason for Ending Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>