CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/idn_case__c.field-meta.xml
<CustomField>
    <fullName>idn_case__c</fullName>
    <description>idn_case</description>
    <externalDeveloperName>idn_case</externalDeveloperName>
    <label>Case Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>