CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/idn_indiv_cat_rq__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_cat_rq__c</fullName>
    <description>idn_indiv_cat_rq</description>
    <externalDeveloperName>idn_indiv_cat_rq</externalDeveloperName>
    <label>Individual category request ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_CAT_RQ__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_CAT_RQ__c</referenceTo>
    <relationshipLabel>Child Care Request Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_cat_rq_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>