CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/nbr_seq_indiv_case__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_indiv_case__c</fullName>
    <description>nbr_seq_indiv_case</description>
    <externalDeveloperName>nbr_seq_indiv_case</externalDeveloperName>
    <label>Individual Case Number Sequence</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>