CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_cat_rq_hist__x/fields/nbr_seq_rq_cat_indiv__c.field-meta.xml
<CustomField>
    <fullName>nbr_seq_rq_cat_indiv__c</fullName>
    <description>nbr_seq_rq_cat_indiv</description>
    <externalDeveloperName>nbr_seq_rq_cat_indiv</externalDeveloperName>
    <label>Individual category request number seq</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>